# public/docs/openapi.yaml
@@ -62,19 +62,19 @@ paths:
                 first_name:
                   type: string
                   description: ''
-                  example: mollitia
+                  example: alias
                 last_name:
                   type: string
                   description: ''
-                  example: quo
+                  example: est
                 email:
                   type: string
                   description: ''
-                  example: non
+                  example: dicta
                 password:
                   type: string
                   description: ''
-                  example: quia
+                  example: ipsa
               required:
                 - first_name
                 - last_name
@@ -136,11 +136,11 @@ paths:
                 email:
                   type: string
                   description: ''
-                  example: nemo
+                  example: voluptatem
                 password:
                   type: string
                   description: ''
-                  example: nihil
+                  example: voluptas
               required:
                 - email
                 - password
@@ -193,7 +193,7 @@ paths:
         in: path
         name: id
         description: 'The ID of the verify.'
-        example: dolor
+        example: voluptatibus
         required: true
         schema:
           type: string
@@ -248,7 +248,7 @@ paths:
         in: path
         name: id
         description: 'The ID of the resend.'
-        example: et
+        example: tempore
         required: true
         schema:
           type: string
@@ -307,7 +307,7 @@ paths:
                 email:
                   type: string
                   description: ''
-                  example: suscipit
+                  example: aut
               required:
                 - email
       security: []
@@ -366,19 +366,247 @@ paths:
                 email:
                   type: string
                   description: ''
-                  example: consectetur
+                  example: nostrum
                 token:
                   type: string
                   description: ''
-                  example: id
+                  example: cum
                 password:
                   type: string
                   description: ''
-                  example: delectus
+                  example: sit
               required:
                 - email
                 - token
                 - password
+      security: []
+  /api/setup:
+    post:
+      summary: 'Registration Setup'
+      description: 'Complete user registration.'
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: Ok
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "{\n   \"success\": true,\n   \"message\": \"Setup Complete!\",\n   \"data\": {\n      \"user\": {\n          ...\n      }\n   }"
+      tags:
+        - 'Auth APIs'
+      requestBody:
+        required: false
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                account_type:
+                  type: string
+                  description: optional
+                  example: accusantium
+                phone:
+                  type: string
+                  description: optional
+                  example: praesentium
+                gender:
+                  type: string
+                  description: optional
+                  example: maxime
+                birthday:
+                  type: date
+                  description: optional
+                  example: quia
+                address:
+                  type: string
+                  description: optional
+                  example: quaerat
+                house_number:
+                  type: string
+                  description: optional
+                  example: sunt
+                street:
+                  type: string
+                  description: optional
+                  example: eum
+                lga:
+                  type: string
+                  description: optional
+                  example: odit
+                lcda:
+                  type: string
+                  description: optional
+                  example: nostrum
+                company_name:
+                  type: string
+                  description: optional
+                  example: illum
+                company_phone:
+                  type: string
+                  description: optional
+                  example: laudantium
+                country:
+                  type: string
+                  description: optional
+                  example: veniam
+                postal_code:
+                  type: string
+                  description: optional
+                  example: vel
+                city:
+                  type: string
+                  description: optional
+                  example: ipsa
+                state:
+                  type: string
+                  description: optional
+                  example: in
+      security: []
+  /api/auth/logout:
+    get:
+      summary: 'User Logout'
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: Ok
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  success: true
+                  message: 'Logout Successful'
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: 'Logout Successful'
+      tags:
+        - 'Auth APIs'
+      security: []
+  /api/user:
+    get:
+      summary: 'User Data'
+      description: 'Get user data'
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: Ok
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "{\n   \"success\": true,\n   \"message\": \"\",\n   \"data\": {\n      \"user\": {\n          ...\n      }\n   }"
+        404:
+          description: 'User not found'
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  success: false
+                  message: 'User not found'
+                properties:
+                  success:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: 'User not found'
+      tags:
+        - 'Auth APIs'
+      security: []
+  /api/me:
+    get:
+      summary: 'User Data'
+      description: 'Get user data.'
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: Ok
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "{\n   \"success\": true,\n   \"message\": \"\",\n   \"data\": {\n      \"user\": {\n          ...\n      }\n   }"
+        404:
+          description: 'User not found'
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  success: false
+                  message: 'User not found'
+                properties:
+                  success:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: 'User not found'
+      tags:
+        - 'Auth APIs'
       security: []
 tags:
   -
